--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@ body,
   height: 100%;
 }
 
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
